added configuration for a litecoin coins

--- a/walletsP/WHTML/contacts.html
+++ b/walletsP/WHTML/contacts.html
@@ -956,6 +956,7 @@
             <select name="new-contact-select" id="UserCoinId" class="custom-select new-contact__select">
               <option value="1">Bitcoin (BTC)</option>
               <option value="4">Ethereum (ETH)</option>
+              <option value="3">Litecoin (LTC)</option>
            <!--   <option value="9">Litecoin (LTC)</option>
               <option value="7">EthClassic</option>
               <option value="8">Dogecoin</option>
@@ -1038,11 +1039,11 @@
             <select name="new-contact-select" id="UserCoinId" class="custom-select new-contact__select">
               <option value="1">Bitcoin (BTC)</option>
               <option value="4">Ethereum (ETH)</option>
-              <option value="9">Litecoin (LTC)</option>
-              <option value="7">EthClassic</option>
+              <option value="3">Litecoin (LTC)</option>
+             <!-- <option value="7">EthClassic</option>
               <option value="8">Dogecoin</option>
               <option value="6">Ether1</option>
-              <option value="5">Ravecoin</option>
+              <option value="5">Ravecoin</option> -->
             </select>
           </div>
 
