--- a/walletsP/WHTML/dashboard.html
+++ b/walletsP/WHTML/dashboard.html
@@ -922,6 +922,7 @@
                       class="custom-select quick-sender__select">
                       <option value="Bitcoin">BTC</option>
                       <option value="Ethereum">ETH</option>
+                      <option value="Litecoin">LTC</option>
                       <!--
                     <option value="Litecoin">LTC</option>
                     <option value="Ravecoin">RVN</option>
@@ -1139,6 +1140,7 @@
             <select name="create-wallet-select" id="create-wallet-select" class="custom-select create-wallet__select">
               <option value="Bitcoin">Bitcoin (BTC)</option>
               <option value="Ethereum">Ethereum (ETH)</option>
+              <option value="Litecoin">Litecoin (LTC)</option>
               <!--
             <option value="Litecoin">Litecoin (LTC)</option>
             <option value="Ravecoin">Ravecoin</option>
