--- a/walletsP/WHTML/support-submit.html
+++ b/walletsP/WHTML/support-submit.html
@@ -773,6 +773,7 @@
                 <select name="coin-wallet-select" id="coin-wallet-select" class="custom-select request-form__select">
                   <option value="Bitcoin wallet">Bitcoin wallet</option>
                   <option value="Ethereum wallet">Ethereum wallet</option>
+                  <option value="Litecoin wallet">Litecoin wallet</option>
                   <option value="Other ...">Other ...</option>
                 </select>
                 <span class="error"></span>
@@ -967,6 +968,7 @@
             <select name="create-wallet-select" id="create-wallet-select" class="custom-select create-wallet__select">
               <option value="Bitcoin">Bitcoin (BTC)</option>
               <option value="Ethereum">Ethereum (ETH)</option>
+              <option value="Ethereum">Litecoin (LTC)</option>
       <!--    <option value="Litecoin">Litecoin (LTC)</option>
               <option value="Ravecoin">Ravecoin</option>
               <option value="Ether1">Ether1</option>
