--- a/walletsP/WHTML/wallets.html
+++ b/walletsP/WHTML/wallets.html
@@ -789,6 +789,7 @@
             <select name="create-wallet-select" id="create-wallet-select" class="custom-select create-wallet__select">
               <option value="Bitcoin">Bitcoin (BTC)</option>
               <option value="Ethereum">Ethereum (ETH)</option>
+              <option value="Litecoin">Litecoin (LTC)</option>
               <!--
                 <option value="Litecoin">Litecoin (LTC)</option>
                 <option value="Ravecoin">Ravecoin</option>
